--- a/YoupornViewerOSX/Info.plist
+++ b/YoupornViewerOSX/Info.plist
@@ -30,7 +30,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 fabrizio chimienti. All rights reserved.</string>
+	<string>Copyright © 2015 kimiko88. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
